syntax = "proto3"; //Versión del proto
// En el archivo del proyecto aparece la referencia a este archivo proto
// https://developers.google.com/protocol-buffers/docs/proto3

option csharp_namespace = "WebAPIAlmacen.Protos"; // namespace del proyecto

package familia_grpc;  // Paquete que agrupa las definiciones

// Definición del servicio
service FamiliaGrpc {
  // El servicio tiene dos métodos rpc GetFamilias y AddFamilia que recibirán por argumento un GetFamiliasRequest y un AddFamiliaRequest respectivamente
  // Devolverán un FamiliasReply y un FamiliaReply respectivamente
  // En el servicio Familia_Grpc que implementa este proto veremos el GetFamilias. 
  rpc GetFamilias (GetFamiliasRequest) returns (FamiliasReply);
  rpc AddFamilia (AddFamiliaRequest) returns (FamiliaReply);
}

message GetFamiliasRequest {
}

message AddFamiliaRequest {
  // Cada atributo tiene un tipo, un nombre y un número
  // Ese número debe ser correlativo y determina el identificador del campo. Cuando se serializa
  // el message cada campo tiene una referencia y esa es el número. Es para uso interno
  string nombre = 1;
}

message FamiliaReply {
  int32 id = 1;
  string nombre = 2;
}

message FamiliasReply {
  repeated FamiliaReply familias = 1;
}

